src/test/deca/syntax/valid/testOr.deca
// test || operator
// Result : OK
{
    true || false;
}
