src/test/deca/syntax/invalid/testPrint6.deca
// print invalid
// Result : Error
{
    println(print("Hi"));
}
